Done huge part of game logic

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </header>
         <div class="game_box" id="game_box">
             <div class="game_box-field_btns">
-                <button class="game_box-field_btns-item hide" id="field_restart_btn">Restart</button>
+                <button class="game_box-field_btns-item hide" id="field_restart_btn">Restart (пока не работает)</button>
                 <button class="game_box-field_btns-item" id="field_gen_btn">Generate</button>
                 <button class="game_box-field_btns-item hide" id="field_start_go_stop_btn">Start</button>
             </div>
